--- a/maze.csproj
+++ b/maze.csproj
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ActressMas">
-      <HintPath>..\ActressMas.dll</HintPath>
+      <HintPath>..\..\ActressMas.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
